--- a/css/creative.css
+++ b/css/creative.css
@@ -436,21 +436,21 @@ h6, .h6 {
   font-size: 16px;
   border: none;
   outline: none;
-  color: white;
+  color: inherit;
   padding: 14px 16px;
-  background-color: inherit;
+  background-color: transparent;
   font-family: inherit; /* Important for vertical align on mobile phones */
   margin: 0; /* Important for vertical align on mobile phones */
 }
 
 /* Add a red background color to navbar links on hover */
 .navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
+  background-color: none;
 }
 
 /* Dropdown content (hidden by default) */
 .dropdown-content {
-  display: none;
+  display: visible;
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
